src/app.css
:root {
	--background: #1a181a;
	--text-1: #e3e1e4;
	--text-2: #848089;
	--text-3: #605d68;
	--text-accent-1: #f85e84;
	--text-accent-2: #ab9df2;
}

@media (prefers-color-scheme: light) {
	:root {
		--background: #f0f0f0;
		--text-1: #200326;
		--text-2: #7d7970;
		--text-3: #efb9f9;
		--text-accent-1: #b612d3;
		--text-accent-2: #c348d8;
	}
}

:root {
	color-scheme: light dark;
	background-color: var(--background);
	color: var(--text-1);
	font-family: "Inter", sans-serif;
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;
	scroll-behavior: smooth;
}


a,
span,
blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre {
	--uno-apply: m-0 font-normal leading-normal;
}

a {
	--uno-apply: transition-colors use-transition-standard;
}

h2 {
	--uno-apply: text-base font-mono leading-loose text-text-accent-1;
}

::selection {
	--uno-apply: bg-text-accent-1 text-background;
}

body {
	--uno-apply: overflow-y-auto relative;
}

#app {
	--uno-apply: flex flex-col max-h-screen lg:(container mx-auto) sm:(flex-row);
}

